# capicxx-someip-runtime

./: .cproject  .gitattributes  .project  Android.bp  Android.mk  CHANGES  CMakeLists.txt  CommonAPI-SomeIP.pc.in  INSTALL  README  README.md  libcommonapi_someip.yaml
.github/workflows/: makefile.yml
cmake/: CommonAPI-SomeIPConfig.cmake.in  CommonAPI-SomeIPConfigVersion.cmake.in
include/CommonAPI/SomeIP/: Address.hpp  AddressTranslator.hpp  Attribute.hpp  ClientId.hpp  CommonAPISomeIP.hpp  Config.hpp  Configuration.hpp  Connection.hpp  Constants.hpp  Defines.hpp  Deployment.hpp  DispatchSource.hpp  Event.hpp  Factory.hpp  Helper.hpp  InputStream.hpp  InstanceAvailabilityStatusChangedEvent.hpp  InterfaceHandler.hpp  Message.hpp  OutputStream.hpp  Proxy.hpp  ProxyAsyncCallbackHandler.hpp  ProxyAsyncEventCallbackHandler.hpp  ProxyBase.hpp  ProxyConnection.hpp  ProxyHelper.hpp  ProxyManager.hpp  SelectiveEvent.hpp  SerializableArguments.hpp  StringEncoder.hpp  StubAdapter.hpp  StubAdapterHelper.hpp  StubManager.hpp  SubscriptionStatusWrapper.hpp  Types.hpp  Watch.hpp
src/CommonAPI/SomeIP/: Address.cpp  AddressTranslator.cpp  ClientId.cpp  Configuration.cpp  Connection.cpp  DispatchSource.cpp  Factory.cpp  InputStream.cpp  InstanceAvailabilityStatusChangedEvent.cpp  Message.cpp  OutputStream.cpp  Proxy.cpp  ProxyBase.cpp  ProxyManager.cpp  StringEncoder.cpp  StubAdapter.cpp  StubManager.cpp  SubscriptionStatusWrapper.cpp  Watch.cpp
test/: CMakeLists.txt  README  vsomeip.json
test/fidl/: managed-test.fdepl  managed-test.fidl
test/src/managed/: DeviceStubImpl.cpp  DeviceStubImpl.hpp  ManagedTest.cpp  ManagerStubImpl.cpp  ManagerStubImpl.hpp  SpecialDeviceStubImpl.cpp  SpecialDeviceStubImpl.hpp
